# Jetson-SPLG-ROS2

./: README.md
oakd_ros2_minimal/: CMakeLists.txt  package.xml
oakd_ros2_minimal/include/: oak_camera_component.hpp
oakd_ros2_minimal/launch/: oak_camera.launch.py
oakd_ros2_minimal/scripts/: save_images.py
oakd_ros2_minimal/src/: oak_camera_component.cpp
splg/: CMakeLists.txt  package.xml
splg/include/: splg_trt_component.hpp  type_conv_helper.cuh
splg/launch/: splg_node.launch.py  splg_trt.launch.py
splg/src/: splg_node.cpp  splg_trt_component.cpp  splg_trt_node.cpp  type_conv_helper.cu  type_conv_helper.cuh
